// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AmsCD AmsCD-1 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\begin{CD}A @&gt;a&gt;&gt; B\\\\@VVbV @VVcV\\\\C @&gt;d&gt;&gt; D\\end{CD}" display="block">
  <mtable columnspacing="5pt" rowspacing="5pt" displaystyle="true" data-latex="\\begin{CD}A @&gt;a&gt;&gt; B\\\\@VVbV @VVcV\\\\C @&gt;d&gt;&gt; D\\end{CD}">
    <mtr>
      <mtd>
        <mi data-latex="A">A</mi>
        <mpadded height="8.5pt" depth="2pt"></mpadded>
      </mtd>
      <mtd>
        <mover>
          <mo minsize="2.75em">&#x2192;</mo>
          <mpadded width="+.67em" lspace=".33em" voffset=".1em">
            <mi data-latex="a">a</mi>
          </mpadded>
        </mover>
      </mtd>
      <mtd>
        <mi data-latex="B">B</mi>
      </mtd>
    </mtr>
    <mtr>
      <mtd>
        <mrow>
          <mo minsize="1.75em" symmetric="true" lspace="0" rspace="0">&#x2193;</mo>
          <mstyle displaystyle="false" scriptlevel="1" data-latex="\\scriptstyle\\raise.125em{\\vcenter{\\rlap{b}}}">
            <mpadded height="+.125em" depth="-.125em" voffset="+.125em" data-latex="{}">
              <mrow data-mjx-texclass="ORD">
                <mpadded data-mjx-vbox="center" data-mjx-texclass="ORD" data-vertical-align="center" data-latex="\\vcenter{\\rlap{b}}">
                  <mrow data-mjx-texclass="ORD" data-latex="\\rlap{b}">
                    <mpadded width="0">
                      <mi data-latex="b">b</mi>
                    </mpadded>
                  </mrow>
                </mpadded>
              </mrow>
            </mpadded>
          </mstyle>
        </mrow>
      </mtd>
      <mtd></mtd>
      <mtd>
        <mrow>
          <mo minsize="1.75em" symmetric="true" lspace="0" rspace="0">&#x2193;</mo>
          <mstyle displaystyle="false" scriptlevel="1" data-latex="\\scriptstyle\\raise.125em{\\vcenter{\\rlap{c}}}">
            <mpadded height="+.125em" depth="-.125em" voffset="+.125em" data-latex="{}">
              <mrow data-mjx-texclass="ORD">
                <mpadded data-mjx-vbox="center" data-mjx-texclass="ORD" data-vertical-align="center" data-latex="\\vcenter{\\rlap{c}}">
                  <mrow data-mjx-texclass="ORD" data-latex="\\rlap{c}">
                    <mpadded width="0">
                      <mi data-latex="c">c</mi>
                    </mpadded>
                  </mrow>
                </mpadded>
              </mrow>
            </mpadded>
          </mstyle>
        </mrow>
      </mtd>
      <mtd></mtd>
    </mtr>
    <mtr>
      <mtd>
        <mi data-latex="C">C</mi>
        <mpadded height="8.5pt" depth="2pt"></mpadded>
      </mtd>
      <mtd>
        <mover>
          <mo minsize="2.75em">&#x2192;</mo>
          <mpadded width="+.67em" lspace=".33em" voffset=".1em">
            <mi data-latex="d">d</mi>
          </mpadded>
        </mover>
      </mtd>
      <mtd>
        <mi data-latex="D">D</mi>
      </mtd>
    </mtr>
  </mtable>
</math>"
`;

exports[`AmsCD AmsCD-2 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\begin{CD}A @&lt;&lt;&lt; B @&gt;&gt;&gt; C\\\\@. @| @AAA\\\\@. D @= E\\end{CD}" display="block">
  <mtable columnspacing="5pt" rowspacing="5pt" displaystyle="true" data-latex="\\begin{CD}A @&lt;&lt;&lt; B @&gt;&gt;&gt; C\\\\@. @| @AAA\\\\@. D @= E\\end{CD}">
    <mtr>
      <mtd>
        <mi data-latex="A">A</mi>
        <mpadded height="8.5pt" depth="2pt"></mpadded>
      </mtd>
      <mtd>
        <mover>
          <mo minsize="2.75em">&#x2190;</mo>
          <mpadded width="+.67em" lspace=".33em" voffset=".1em">
            <mspace width="2.75em" linebreak="nobreak" data-latex="\\kern 2.75em"></mspace>
          </mpadded>
        </mover>
      </mtd>
      <mtd>
        <mi data-latex="B">B</mi>
      </mtd>
      <mtd>
        <mover>
          <mo minsize="2.75em">&#x2192;</mo>
          <mpadded width="+.67em" lspace=".33em" voffset=".1em">
            <mspace width="2.75em" linebreak="nobreak" data-latex="\\kern 2.75em"></mspace>
          </mpadded>
        </mover>
      </mtd>
      <mtd>
        <mi data-latex="C">C</mi>
      </mtd>
    </mtr>
    <mtr>
      <mtd></mtd>
      <mtd></mtd>
      <mtd>
        <mo minsize="1.75em" stretchy="true" symmetric="true" lspace="0" rspace="0">&#x2225;</mo>
      </mtd>
      <mtd></mtd>
      <mtd>
        <mo minsize="1.75em" symmetric="true" lspace="0" rspace="0">&#x2191;</mo>
      </mtd>
      <mtd></mtd>
    </mtr>
    <mtr>
      <mtd>
        <mpadded height="8.5pt" depth="2pt"></mpadded>
      </mtd>
      <mtd></mtd>
      <mtd>
        <mi data-latex="D">D</mi>
      </mtd>
      <mtd>
        <mo minsize="2.75em" stretchy="true">=</mo>
      </mtd>
      <mtd>
        <mi data-latex="E">E</mi>
      </mtd>
    </mtr>
  </mtable>
</math>"
`;

exports[`AmsCD AmsCD-3 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\begin{CD}A @&gt;a&gt;b&gt; B\\\\@VlVrV @AlArA\\\\C @&lt;a&lt;b&lt; D\\end{CD}" display="block">
  <mtable columnspacing="5pt" rowspacing="5pt" displaystyle="true" data-latex="\\begin{CD}A @&gt;a&gt;b&gt; B\\\\@VlVrV @AlArA\\\\C @&lt;a&lt;b&lt; D\\end{CD}">
    <mtr>
      <mtd>
        <mi data-latex="A">A</mi>
        <mpadded height="8.5pt" depth="2pt"></mpadded>
      </mtd>
      <mtd>
        <munderover>
          <mo minsize="2.75em">&#x2192;</mo>
          <mpadded width="+.67em" lspace=".33em">
            <mi data-latex="b">b</mi>
          </mpadded>
          <mpadded width="+.67em" lspace=".33em" voffset=".1em">
            <mi data-latex="a">a</mi>
          </mpadded>
        </munderover>
      </mtd>
      <mtd>
        <mi data-latex="B">B</mi>
      </mtd>
    </mtr>
    <mtr>
      <mtd>
        <mrow>
          <mstyle displaystyle="false" scriptlevel="1" data-latex="\\scriptstyle\\raise.125em{\\vcenter{\\llap{l}}}">
            <mpadded height="+.125em" depth="-.125em" voffset="+.125em" data-latex="{}">
              <mrow data-mjx-texclass="ORD">
                <mpadded data-mjx-vbox="center" data-mjx-texclass="ORD" data-vertical-align="center" data-latex="\\vcenter{\\llap{l}}">
                  <mrow data-mjx-texclass="ORD" data-latex="\\llap{l}">
                    <mpadded width="0" lspace="-1width">
                      <mi data-latex="l">l</mi>
                    </mpadded>
                  </mrow>
                </mpadded>
              </mrow>
            </mpadded>
          </mstyle>
          <mo minsize="1.75em" symmetric="true" lspace="0" rspace="0">&#x2193;</mo>
          <mstyle displaystyle="false" scriptlevel="1" data-latex="\\scriptstyle\\raise.125em{\\vcenter{\\rlap{r}}}">
            <mpadded height="+.125em" depth="-.125em" voffset="+.125em" data-latex="{}">
              <mrow data-mjx-texclass="ORD">
                <mpadded data-mjx-vbox="center" data-mjx-texclass="ORD" data-vertical-align="center" data-latex="\\vcenter{\\rlap{r}}">
                  <mrow data-mjx-texclass="ORD" data-latex="\\rlap{r}">
                    <mpadded width="0">
                      <mi data-latex="r">r</mi>
                    </mpadded>
                  </mrow>
                </mpadded>
              </mrow>
            </mpadded>
          </mstyle>
        </mrow>
      </mtd>
      <mtd></mtd>
      <mtd>
        <mrow>
          <mstyle displaystyle="false" scriptlevel="1" data-latex="\\scriptstyle\\raise.125em{\\vcenter{\\llap{l}}}">
            <mpadded height="+.125em" depth="-.125em" voffset="+.125em" data-latex="{}">
              <mrow data-mjx-texclass="ORD">
                <mpadded data-mjx-vbox="center" data-mjx-texclass="ORD" data-vertical-align="center" data-latex="\\vcenter{\\llap{l}}">
                  <mrow data-mjx-texclass="ORD" data-latex="\\llap{l}">
                    <mpadded width="0" lspace="-1width">
                      <mi data-latex="l">l</mi>
                    </mpadded>
                  </mrow>
                </mpadded>
              </mrow>
            </mpadded>
          </mstyle>
          <mo minsize="1.75em" symmetric="true" lspace="0" rspace="0">&#x2191;</mo>
          <mstyle displaystyle="false" scriptlevel="1" data-latex="\\scriptstyle\\raise.125em{\\vcenter{\\rlap{r}}}">
            <mpadded height="+.125em" depth="-.125em" voffset="+.125em" data-latex="{}">
              <mrow data-mjx-texclass="ORD">
                <mpadded data-mjx-vbox="center" data-mjx-texclass="ORD" data-vertical-align="center" data-latex="\\vcenter{\\rlap{r}}">
                  <mrow data-mjx-texclass="ORD" data-latex="\\rlap{r}">
                    <mpadded width="0">
                      <mi data-latex="r">r</mi>
                    </mpadded>
                  </mrow>
                </mpadded>
              </mrow>
            </mpadded>
          </mstyle>
        </mrow>
      </mtd>
      <mtd></mtd>
    </mtr>
    <mtr>
      <mtd>
        <mi data-latex="C">C</mi>
        <mpadded height="8.5pt" depth="2pt"></mpadded>
      </mtd>
      <mtd>
        <munderover>
          <mo minsize="2.75em">&#x2190;</mo>
          <mpadded width="+.67em" lspace=".33em">
            <mi data-latex="b">b</mi>
          </mpadded>
          <mpadded width="+.67em" lspace=".33em" voffset=".1em">
            <mi data-latex="a">a</mi>
          </mpadded>
        </munderover>
      </mtd>
      <mtd>
        <mi data-latex="D">D</mi>
      </mtd>
    </mtr>
  </mtable>
</math>"
`;

exports[`AmsCD AmsCD-4 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\begin{CD}A @&gt;&gt;&gt; B@&gt;\\text{very long label}&gt;&gt;C\\\\@VVV @VVV @VVV\\\\D @&gt;&gt;&gt; E@&gt;&gt;&gt; F\\end{CD}" display="block">
  <mtable columnspacing="5pt" rowspacing="5pt" displaystyle="true" data-latex="\\begin{CD}A @&gt;&gt;&gt; B@&gt;\\text{very long label}&gt;&gt;C\\\\@VVV @VVV @VVV\\\\D @&gt;&gt;&gt; E@&gt;&gt;&gt; F\\end{CD}">
    <mtr>
      <mtd>
        <mi data-latex="A">A</mi>
        <mpadded height="8.5pt" depth="2pt"></mpadded>
      </mtd>
      <mtd>
        <mover>
          <mo minsize="2.75em">&#x2192;</mo>
          <mpadded width="+.67em" lspace=".33em" voffset=".1em">
            <mspace width="2.75em" linebreak="nobreak" data-latex="\\kern 2.75em"></mspace>
          </mpadded>
        </mover>
      </mtd>
      <mtd>
        <mi data-latex="B">B</mi>
      </mtd>
      <mtd>
        <mover>
          <mo minsize="2.75em">&#x2192;</mo>
          <mpadded width="+.67em" lspace=".33em" voffset=".1em">
            <mtext data-latex="\\text{very long label}">very long label</mtext>
          </mpadded>
        </mover>
      </mtd>
      <mtd>
        <mi data-latex="C">C</mi>
      </mtd>
    </mtr>
    <mtr>
      <mtd>
        <mo minsize="1.75em" symmetric="true" lspace="0" rspace="0">&#x2193;</mo>
      </mtd>
      <mtd></mtd>
      <mtd>
        <mo minsize="1.75em" symmetric="true" lspace="0" rspace="0">&#x2193;</mo>
      </mtd>
      <mtd></mtd>
      <mtd>
        <mo minsize="1.75em" symmetric="true" lspace="0" rspace="0">&#x2193;</mo>
      </mtd>
      <mtd></mtd>
    </mtr>
    <mtr>
      <mtd>
        <mi data-latex="D">D</mi>
        <mpadded height="8.5pt" depth="2pt"></mpadded>
      </mtd>
      <mtd>
        <mover>
          <mo minsize="2.75em">&#x2192;</mo>
          <mpadded width="+.67em" lspace=".33em" voffset=".1em">
            <mspace width="2.75em" linebreak="nobreak" data-latex="\\kern 2.75em"></mspace>
          </mpadded>
        </mover>
      </mtd>
      <mtd>
        <mi data-latex="E">E</mi>
      </mtd>
      <mtd>
        <mover>
          <mo minsize="2.75em">&#x2192;</mo>
          <mpadded width="+.67em" lspace=".33em" voffset=".1em">
            <mspace width="2.75em" linebreak="nobreak" data-latex="\\kern 2.75em"></mspace>
          </mpadded>
        </mover>
      </mtd>
      <mtd>
        <mi data-latex="F">F</mi>
      </mtd>
    </mtr>
  </mtable>
</math>"
`;

exports[`AmsCD AmsCD-5 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\begin{CD}A @&gt;&gt;&gt; B @&gt;{\\text{very long label}}&gt;&gt; C \\\\@VVV @VVV @VVV \\\\D @&gt;&gt;&gt; E @&gt;{\\phantom{\\text{very long label}}}&gt;&gt; F\\end{CD}" display="block">
  <mtable columnspacing="5pt" rowspacing="5pt" displaystyle="true" data-latex="\\begin{CD}A @&gt;&gt;&gt; B @&gt;{\\text{very long label}}&gt;&gt; C \\\\@VVV @VVV @VVV \\\\D @&gt;&gt;&gt; E @&gt;{\\phantom{\\text{very long label}}}&gt;&gt; F\\end{CD}">
    <mtr>
      <mtd>
        <mi data-latex="A">A</mi>
        <mpadded height="8.5pt" depth="2pt"></mpadded>
      </mtd>
      <mtd>
        <mover>
          <mo minsize="2.75em">&#x2192;</mo>
          <mpadded width="+.67em" lspace=".33em" voffset=".1em">
            <mspace width="2.75em" linebreak="nobreak" data-latex="\\kern 2.75em"></mspace>
          </mpadded>
        </mover>
      </mtd>
      <mtd>
        <mi data-latex="B">B</mi>
      </mtd>
      <mtd>
        <mover>
          <mo minsize="2.75em">&#x2192;</mo>
          <mpadded width="+.67em" lspace=".33em" voffset=".1em">
            <mrow data-mjx-texclass="ORD" data-latex="{\\text{very long label}}">
              <mtext data-latex="\\text{very long label}">very long label</mtext>
            </mrow>
          </mpadded>
        </mover>
      </mtd>
      <mtd>
        <mi data-latex="C">C</mi>
      </mtd>
    </mtr>
    <mtr>
      <mtd>
        <mo minsize="1.75em" symmetric="true" lspace="0" rspace="0">&#x2193;</mo>
      </mtd>
      <mtd></mtd>
      <mtd>
        <mo minsize="1.75em" symmetric="true" lspace="0" rspace="0">&#x2193;</mo>
      </mtd>
      <mtd></mtd>
      <mtd>
        <mo minsize="1.75em" symmetric="true" lspace="0" rspace="0">&#x2193;</mo>
      </mtd>
      <mtd></mtd>
    </mtr>
    <mtr>
      <mtd>
        <mi data-latex="D">D</mi>
        <mpadded height="8.5pt" depth="2pt"></mpadded>
      </mtd>
      <mtd>
        <mover>
          <mo minsize="2.75em">&#x2192;</mo>
          <mpadded width="+.67em" lspace=".33em" voffset=".1em">
            <mspace width="2.75em" linebreak="nobreak" data-latex="\\kern 2.75em"></mspace>
          </mpadded>
        </mover>
      </mtd>
      <mtd>
        <mi data-latex="E">E</mi>
      </mtd>
      <mtd>
        <mover>
          <mo minsize="2.75em">&#x2192;</mo>
          <mpadded width="+.67em" lspace=".33em" voffset=".1em">
            <mrow data-mjx-texclass="ORD" data-latex="{\\phantom{\\text{very long label}}}">
              <mrow data-mjx-texclass="ORD" data-latex="\\phantom{\\text{very long label}}">
                <mphantom>
                  <mtext data-latex="\\text{very long label}">very long label</mtext>
                </mphantom>
              </mrow>
            </mrow>
          </mpadded>
        </mover>
      </mtd>
      <mtd>
        <mi data-latex="F">F</mi>
      </mtd>
    </mtr>
  </mtable>
</math>"
`;

exports[`AmsCD AmsCD-6 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\begin{CD}A @&gt;&gt;&gt; B @&gt;{\\text{very long label}}&gt;&gt; C \\\\@VVV @VVV @VVV \\\\D @&gt;&gt;&gt; E @&gt;{\\rlap{\\scriptstyle{\\ \\ \\ \\text{shorter}}}\\phantom{\\text{very long label}}}&gt;&gt; F\\end{CD}" display="block">
  <mtable columnspacing="5pt" rowspacing="5pt" displaystyle="true" data-latex="\\begin{CD}A @&gt;&gt;&gt; B @&gt;{\\text{very long label}}&gt;&gt; C \\\\@VVV @VVV @VVV \\\\D @&gt;&gt;&gt; E @&gt;{\\rlap{\\scriptstyle{\\ \\ \\ \\text{shorter}}}\\phantom{\\text{very long label}}}&gt;&gt; F\\end{CD}">
    <mtr>
      <mtd>
        <mi data-latex="A">A</mi>
        <mpadded height="8.5pt" depth="2pt"></mpadded>
      </mtd>
      <mtd>
        <mover>
          <mo minsize="2.75em">&#x2192;</mo>
          <mpadded width="+.67em" lspace=".33em" voffset=".1em">
            <mspace width="2.75em" linebreak="nobreak" data-latex="\\kern 2.75em"></mspace>
          </mpadded>
        </mover>
      </mtd>
      <mtd>
        <mi data-latex="B">B</mi>
      </mtd>
      <mtd>
        <mover>
          <mo minsize="2.75em">&#x2192;</mo>
          <mpadded width="+.67em" lspace=".33em" voffset=".1em">
            <mrow data-mjx-texclass="ORD" data-latex="{\\text{very long label}}">
              <mtext data-latex="\\text{very long label}">very long label</mtext>
            </mrow>
          </mpadded>
        </mover>
      </mtd>
      <mtd>
        <mi data-latex="C">C</mi>
      </mtd>
    </mtr>
    <mtr>
      <mtd>
        <mo minsize="1.75em" symmetric="true" lspace="0" rspace="0">&#x2193;</mo>
      </mtd>
      <mtd></mtd>
      <mtd>
        <mo minsize="1.75em" symmetric="true" lspace="0" rspace="0">&#x2193;</mo>
      </mtd>
      <mtd></mtd>
      <mtd>
        <mo minsize="1.75em" symmetric="true" lspace="0" rspace="0">&#x2193;</mo>
      </mtd>
      <mtd></mtd>
    </mtr>
    <mtr>
      <mtd>
        <mi data-latex="D">D</mi>
        <mpadded height="8.5pt" depth="2pt"></mpadded>
      </mtd>
      <mtd>
        <mover>
          <mo minsize="2.75em">&#x2192;</mo>
          <mpadded width="+.67em" lspace=".33em" voffset=".1em">
            <mspace width="2.75em" linebreak="nobreak" data-latex="\\kern 2.75em"></mspace>
          </mpadded>
        </mover>
      </mtd>
      <mtd>
        <mi data-latex="E">E</mi>
      </mtd>
      <mtd>
        <mover>
          <mo minsize="2.75em">&#x2192;</mo>
          <mpadded width="+.67em" lspace=".33em" voffset=".1em">
            <mrow data-mjx-texclass="ORD" data-latex="{\\rlap{\\scriptstyle{\\ \\ \\ \\text{shorter}}}\\phantom{\\text{very long label}}}">
              <mrow data-mjx-texclass="ORD" data-latex="\\rlap{\\scriptstyle{\\ \\ \\ \\text{shorter}}}">
                <mpadded width="0">
                  <mrow data-mjx-texclass="ORD" data-latex="\\scriptstyle{\\ \\ \\ \\text{shorter}}">
                    <mtext data-latex="\\ ">&#xA0;</mtext>
                    <mtext data-latex="\\ ">&#xA0;</mtext>
                    <mtext data-latex="\\ ">&#xA0;</mtext>
                    <mtext data-latex="\\text{shorter}">shorter</mtext>
                  </mrow>
                </mpadded>
              </mrow>
              <mrow data-mjx-texclass="ORD" data-latex="\\phantom{\\text{very long label}}">
                <mphantom>
                  <mtext data-latex="\\text{very long label}">very long label</mtext>
                </mphantom>
              </mrow>
            </mrow>
          </mpadded>
        </mover>
      </mtd>
      <mtd>
        <mi data-latex="F">F</mi>
      </mtd>
    </mtr>
  </mtable>
</math>"
`;

exports[`AmsCD AmsCD-both 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\minCDarrowheight{4cm}\\minCDarrowwidth{5cm}\\begin{CD}A @&gt;a&gt;&gt; B\\\\@VVbV @VVcV\\\\C @&gt;d&gt;&gt; D\\end{CD}" display="block">
  <mtable columnspacing="5pt" rowspacing="5pt" displaystyle="true" data-latex="\\minCDarrowheight{4cm}\\minCDarrowwidth{5cm}\\begin{CD}A @&gt;a&gt;&gt; B\\\\@VVbV @VVcV\\\\C @&gt;d&gt;&gt; D\\end{CD}">
    <mtr>
      <mtd>
        <mi data-latex="A">A</mi>
        <mpadded height="8.5pt" depth="2pt"></mpadded>
      </mtd>
      <mtd>
        <mover>
          <mo minsize="5cm">&#x2192;</mo>
          <mpadded width="+.67em" lspace=".33em" voffset=".1em">
            <mi data-latex="a">a</mi>
          </mpadded>
        </mover>
      </mtd>
      <mtd>
        <mi data-latex="B">B</mi>
      </mtd>
    </mtr>
    <mtr>
      <mtd>
        <mrow>
          <mo minsize="4cm" symmetric="true" lspace="0" rspace="0">&#x2193;</mo>
          <mstyle displaystyle="false" scriptlevel="1" data-latex="\\scriptstyle\\raise.125em{\\vcenter{\\rlap{b}}}">
            <mpadded height="+.125em" depth="-.125em" voffset="+.125em" data-latex="{}">
              <mrow data-mjx-texclass="ORD">
                <mpadded data-mjx-vbox="center" data-mjx-texclass="ORD" data-vertical-align="center" data-latex="\\vcenter{\\rlap{b}}">
                  <mrow data-mjx-texclass="ORD" data-latex="\\rlap{b}">
                    <mpadded width="0">
                      <mi data-latex="b">b</mi>
                    </mpadded>
                  </mrow>
                </mpadded>
              </mrow>
            </mpadded>
          </mstyle>
        </mrow>
      </mtd>
      <mtd></mtd>
      <mtd>
        <mrow>
          <mo minsize="4cm" symmetric="true" lspace="0" rspace="0">&#x2193;</mo>
          <mstyle displaystyle="false" scriptlevel="1" data-latex="\\scriptstyle\\raise.125em{\\vcenter{\\rlap{c}}}">
            <mpadded height="+.125em" depth="-.125em" voffset="+.125em" data-latex="{}">
              <mrow data-mjx-texclass="ORD">
                <mpadded data-mjx-vbox="center" data-mjx-texclass="ORD" data-vertical-align="center" data-latex="\\vcenter{\\rlap{c}}">
                  <mrow data-mjx-texclass="ORD" data-latex="\\rlap{c}">
                    <mpadded width="0">
                      <mi data-latex="c">c</mi>
                    </mpadded>
                  </mrow>
                </mpadded>
              </mrow>
            </mpadded>
          </mstyle>
        </mrow>
      </mtd>
      <mtd></mtd>
    </mtr>
    <mtr>
      <mtd>
        <mi data-latex="C">C</mi>
        <mpadded height="8.5pt" depth="2pt"></mpadded>
      </mtd>
      <mtd>
        <mover>
          <mo minsize="5cm">&#x2192;</mo>
          <mpadded width="+.67em" lspace=".33em" voffset=".1em">
            <mi data-latex="d">d</mi>
          </mpadded>
        </mover>
      </mtd>
      <mtd>
        <mi data-latex="D">D</mi>
      </mtd>
    </mtr>
  </mtable>
</math>"
`;

exports[`AmsCD AmsCD-height 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\minCDarrowheight{4cm}\\begin{CD}A @&gt;a&gt;&gt; B\\\\@VVbV @VVcV\\\\C @&gt;d&gt;&gt; D\\end{CD}" display="block">
  <mtable columnspacing="5pt" rowspacing="5pt" displaystyle="true" data-latex="\\minCDarrowheight{4cm}\\begin{CD}A @&gt;a&gt;&gt; B\\\\@VVbV @VVcV\\\\C @&gt;d&gt;&gt; D\\end{CD}">
    <mtr>
      <mtd>
        <mi data-latex="A">A</mi>
        <mpadded height="8.5pt" depth="2pt"></mpadded>
      </mtd>
      <mtd>
        <mover>
          <mo minsize="2.75em">&#x2192;</mo>
          <mpadded width="+.67em" lspace=".33em" voffset=".1em">
            <mi data-latex="a">a</mi>
          </mpadded>
        </mover>
      </mtd>
      <mtd>
        <mi data-latex="B">B</mi>
      </mtd>
    </mtr>
    <mtr>
      <mtd>
        <mrow>
          <mo minsize="4cm" symmetric="true" lspace="0" rspace="0">&#x2193;</mo>
          <mstyle displaystyle="false" scriptlevel="1" data-latex="\\scriptstyle\\raise.125em{\\vcenter{\\rlap{b}}}">
            <mpadded height="+.125em" depth="-.125em" voffset="+.125em" data-latex="{}">
              <mrow data-mjx-texclass="ORD">
                <mpadded data-mjx-vbox="center" data-mjx-texclass="ORD" data-vertical-align="center" data-latex="\\vcenter{\\rlap{b}}">
                  <mrow data-mjx-texclass="ORD" data-latex="\\rlap{b}">
                    <mpadded width="0">
                      <mi data-latex="b">b</mi>
                    </mpadded>
                  </mrow>
                </mpadded>
              </mrow>
            </mpadded>
          </mstyle>
        </mrow>
      </mtd>
      <mtd></mtd>
      <mtd>
        <mrow>
          <mo minsize="4cm" symmetric="true" lspace="0" rspace="0">&#x2193;</mo>
          <mstyle displaystyle="false" scriptlevel="1" data-latex="\\scriptstyle\\raise.125em{\\vcenter{\\rlap{c}}}">
            <mpadded height="+.125em" depth="-.125em" voffset="+.125em" data-latex="{}">
              <mrow data-mjx-texclass="ORD">
                <mpadded data-mjx-vbox="center" data-mjx-texclass="ORD" data-vertical-align="center" data-latex="\\vcenter{\\rlap{c}}">
                  <mrow data-mjx-texclass="ORD" data-latex="\\rlap{c}">
                    <mpadded width="0">
                      <mi data-latex="c">c</mi>
                    </mpadded>
                  </mrow>
                </mpadded>
              </mrow>
            </mpadded>
          </mstyle>
        </mrow>
      </mtd>
      <mtd></mtd>
    </mtr>
    <mtr>
      <mtd>
        <mi data-latex="C">C</mi>
        <mpadded height="8.5pt" depth="2pt"></mpadded>
      </mtd>
      <mtd>
        <mover>
          <mo minsize="2.75em">&#x2192;</mo>
          <mpadded width="+.67em" lspace=".33em" voffset=".1em">
            <mi data-latex="d">d</mi>
          </mpadded>
        </mover>
      </mtd>
      <mtd>
        <mi data-latex="D">D</mi>
      </mtd>
    </mtr>
  </mtable>
</math>"
`;

exports[`AmsCD AmsCD-width 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\minCDarrowwidth{5cm}\\begin{CD}A @&gt;a&gt;&gt; B\\\\@VVbV @VVcV\\\\C @&gt;d&gt;&gt; D\\end{CD}" display="block">
  <mtable columnspacing="5pt" rowspacing="5pt" displaystyle="true" data-latex="\\minCDarrowwidth{5cm}\\begin{CD}A @&gt;a&gt;&gt; B\\\\@VVbV @VVcV\\\\C @&gt;d&gt;&gt; D\\end{CD}">
    <mtr>
      <mtd>
        <mi data-latex="A">A</mi>
        <mpadded height="8.5pt" depth="2pt"></mpadded>
      </mtd>
      <mtd>
        <mover>
          <mo minsize="5cm">&#x2192;</mo>
          <mpadded width="+.67em" lspace=".33em" voffset=".1em">
            <mi data-latex="a">a</mi>
          </mpadded>
        </mover>
      </mtd>
      <mtd>
        <mi data-latex="B">B</mi>
      </mtd>
    </mtr>
    <mtr>
      <mtd>
        <mrow>
          <mo minsize="1.75em" symmetric="true" lspace="0" rspace="0">&#x2193;</mo>
          <mstyle displaystyle="false" scriptlevel="1" data-latex="\\scriptstyle\\raise.125em{\\vcenter{\\rlap{b}}}">
            <mpadded height="+.125em" depth="-.125em" voffset="+.125em" data-latex="{}">
              <mrow data-mjx-texclass="ORD">
                <mpadded data-mjx-vbox="center" data-mjx-texclass="ORD" data-vertical-align="center" data-latex="\\vcenter{\\rlap{b}}">
                  <mrow data-mjx-texclass="ORD" data-latex="\\rlap{b}">
                    <mpadded width="0">
                      <mi data-latex="b">b</mi>
                    </mpadded>
                  </mrow>
                </mpadded>
              </mrow>
            </mpadded>
          </mstyle>
        </mrow>
      </mtd>
      <mtd></mtd>
      <mtd>
        <mrow>
          <mo minsize="1.75em" symmetric="true" lspace="0" rspace="0">&#x2193;</mo>
          <mstyle displaystyle="false" scriptlevel="1" data-latex="\\scriptstyle\\raise.125em{\\vcenter{\\rlap{c}}}">
            <mpadded height="+.125em" depth="-.125em" voffset="+.125em" data-latex="{}">
              <mrow data-mjx-texclass="ORD">
                <mpadded data-mjx-vbox="center" data-mjx-texclass="ORD" data-vertical-align="center" data-latex="\\vcenter{\\rlap{c}}">
                  <mrow data-mjx-texclass="ORD" data-latex="\\rlap{c}">
                    <mpadded width="0">
                      <mi data-latex="c">c</mi>
                    </mpadded>
                  </mrow>
                </mpadded>
              </mrow>
            </mpadded>
          </mstyle>
        </mrow>
      </mtd>
      <mtd></mtd>
    </mtr>
    <mtr>
      <mtd>
        <mi data-latex="C">C</mi>
        <mpadded height="8.5pt" depth="2pt"></mpadded>
      </mtd>
      <mtd>
        <mover>
          <mo minsize="5cm">&#x2192;</mo>
          <mpadded width="+.67em" lspace=".33em" voffset=".1em">
            <mi data-latex="d">d</mi>
          </mpadded>
        </mover>
      </mtd>
      <mtd>
        <mi data-latex="D">D</mi>
      </mtd>
    </mtr>
  </mtable>
</math>"
`;

exports[`AmsCD Entry with prime (#3373) 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\begin{CD}A' @&gt;&gt;&gt; B\\end{CD}" display="block">
  <mtable columnspacing="5pt" rowspacing="5pt" displaystyle="true" data-latex="\\begin{CD}A' @&gt;&gt;&gt; B\\end{CD}">
    <mtr>
      <mtd>
        <msup>
          <mi data-latex="A">A</mi>
          <mo data-mjx-alternate="1" data-latex="'">&#x2032;</mo>
        </msup>
        <mpadded height="8.5pt" depth="2pt"></mpadded>
      </mtd>
      <mtd>
        <mover>
          <mo minsize="2.75em">&#x2192;</mo>
          <mpadded width="+.67em" lspace=".33em" voffset=".1em">
            <mspace width="2.75em" linebreak="nobreak" data-latex="\\kern 2.75em"></mspace>
          </mpadded>
        </mover>
      </mtd>
      <mtd>
        <mi data-latex="B">B</mi>
      </mtd>
    </mtr>
  </mtable>
</math>"
`;

exports[`AmsCD Options Hide Horizontal Labels 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\begin{CD}A @&gt;a&gt;&gt; B\\\\@VVbV @VVcV\\\\C @&gt;d&gt;&gt; D\\end{CD}" display="block">
  <mtable columnspacing="5pt" rowspacing="5pt" displaystyle="true" data-latex="\\begin{CD}A @&gt;a&gt;&gt; B\\\\@VVbV @VVcV\\\\C @&gt;d&gt;&gt; D\\end{CD}">
    <mtr>
      <mtd>
        <mi data-latex="A">A</mi>
        <mpadded height="8.5pt" depth="2pt"></mpadded>
      </mtd>
      <mtd>
        <mpadded depth="0" height=".67em">
          <mover>
            <mo minsize="2.75em">&#x2192;</mo>
            <mpadded width="+.67em" lspace=".33em" voffset=".1em">
              <mi data-latex="a">a</mi>
            </mpadded>
          </mover>
        </mpadded>
      </mtd>
      <mtd>
        <mi data-latex="B">B</mi>
      </mtd>
    </mtr>
    <mtr>
      <mtd>
        <mrow>
          <mo minsize="1.75em" symmetric="true" lspace="0" rspace="0">&#x2193;</mo>
          <mstyle displaystyle="false" scriptlevel="1" data-latex="\\scriptstyle\\raise.125em{\\vcenter{\\rlap{b}}}">
            <mpadded height="+.125em" depth="-.125em" voffset="+.125em" data-latex="{}">
              <mrow data-mjx-texclass="ORD">
                <mpadded data-mjx-vbox="center" data-mjx-texclass="ORD" data-vertical-align="center" data-latex="\\vcenter{\\rlap{b}}">
                  <mrow data-mjx-texclass="ORD" data-latex="\\rlap{b}">
                    <mpadded width="0">
                      <mi data-latex="b">b</mi>
                    </mpadded>
                  </mrow>
                </mpadded>
              </mrow>
            </mpadded>
          </mstyle>
        </mrow>
      </mtd>
      <mtd></mtd>
      <mtd>
        <mrow>
          <mo minsize="1.75em" symmetric="true" lspace="0" rspace="0">&#x2193;</mo>
          <mstyle displaystyle="false" scriptlevel="1" data-latex="\\scriptstyle\\raise.125em{\\vcenter{\\rlap{c}}}">
            <mpadded height="+.125em" depth="-.125em" voffset="+.125em" data-latex="{}">
              <mrow data-mjx-texclass="ORD">
                <mpadded data-mjx-vbox="center" data-mjx-texclass="ORD" data-vertical-align="center" data-latex="\\vcenter{\\rlap{c}}">
                  <mrow data-mjx-texclass="ORD" data-latex="\\rlap{c}">
                    <mpadded width="0">
                      <mi data-latex="c">c</mi>
                    </mpadded>
                  </mrow>
                </mpadded>
              </mrow>
            </mpadded>
          </mstyle>
        </mrow>
      </mtd>
      <mtd></mtd>
    </mtr>
    <mtr>
      <mtd>
        <mi data-latex="C">C</mi>
        <mpadded height="8.5pt" depth="2pt"></mpadded>
      </mtd>
      <mtd>
        <mpadded depth="0" height=".67em">
          <mover>
            <mo minsize="2.75em">&#x2192;</mo>
            <mpadded width="+.67em" lspace=".33em" voffset=".1em">
              <mi data-latex="d">d</mi>
            </mpadded>
          </mover>
        </mpadded>
      </mtd>
      <mtd>
        <mi data-latex="D">D</mi>
      </mtd>
    </mtr>
  </mtable>
</math>"
`;

exports[`AmsCD Spaces 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\begin{CD}A @ &gt; x &gt; &gt; B \\end{CD}" display="block">
  <mtable columnspacing="5pt" rowspacing="5pt" displaystyle="true" data-latex="\\begin{CD}A @ &gt; x &gt; &gt; B \\end{CD}">
    <mtr>
      <mtd>
        <mi data-latex="A">A</mi>
        <mpadded height="8.5pt" depth="2pt"></mpadded>
      </mtd>
      <mtd>
        <mover>
          <mo minsize="2.75em">&#x2192;</mo>
          <mpadded width="+.67em" lspace=".33em" voffset=".1em">
            <mi data-latex="x">x</mi>
          </mpadded>
        </mover>
      </mtd>
      <mtd>
        <mi data-latex="B">B</mi>
      </mtd>
    </mtr>
  </mtable>
</math>"
`;

exports[`AmsCD Suspicious Return 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\begin{CD}A @Ra&gt;&gt; BaD\\end{CD}" display="block">
  <mtable columnspacing="5pt" rowspacing="5pt" displaystyle="true" data-latex="\\begin{CD}A @Ra&gt;&gt; BaD\\end{CD}">
    <mtr>
      <mtd>
        <mi data-latex="A">A</mi>
        <mo data-latex="@">@</mo>
        <mi data-latex="R">R</mi>
        <mi data-latex="a">a</mi>
        <mo data-mjx-texclass="REL" data-latex="&gt;&gt;">&gt;&gt;</mo>
        <mi data-latex="B">B</mi>
        <mi data-latex="a">a</mi>
        <mi data-latex="D">D</mi>
      </mtd>
    </mtr>
  </mtable>
</math>"
`;
